# Trueears

./: .env.example  .gitignore  App.tsx  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESKTOP_APP_FIX.md  MIGRATION_SUMMARY.md  README.md  SECURITY.md  background.ts  clean.bat  clean.sh  content.tsx  eslint.config.js  index.html  metadata.json  package-lock.json  package.json  rust_auth_architecture.md  vite.config.ts
.claude/commands/: doc-refactor.md  push-all.md  setup-ci-cd.md  sp.phr.md  sp.reverse-engineer.md  sp.specify.md  unit-test-expand.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md
auth-server/: .env.example  Cargo.toml  README.md  vercel.json
auth-server/api/: auth.rs
auth-server/migrations/: 001_create_users.sql
auth-server/src/: config.rs  db.rs  lib.rs  main.rs
auth-server/src/handlers/: auth.rs  user.rs
auth-server/src/middleware/: auth_middleware.rs
auth-server/src/models/: user.rs
auth-server/src/utils/: jwt.rs
backend/: Cargo.toml  README.md  tauri.conf.json
backend/assets/legal/: terms-and-privacy.rtf  terms-and-privacy.txt
backend/capabilities/: default.json  main-window.json  settings-window.json
backend/icons/: .gitkeep
backend/src/: auth.rs  automation.rs  error.rs  installed_apps.rs  lib.rs  linux_portal_shortcuts.rs  linux_remote_desktop.rs  log_mode.rs  shortcuts.rs  window.rs
backend/src/installed_apps/: windows_impl.rs
components/: AudioVisualizer.tsx  RecorderOverlay.tsx
dist-electron/: main.js  main.js.map  preload.js  preload.js.map
docs/: ARCHITECTURE.md  DEVELOPMENT.md  README.md
docs/architecture/: overview.md
docs/guides/: deployment.md  development.md  getting-started.md
docs/reference/: tauri-commands.md
docs/troubleshooting/: README.md  faq.md
electron/: automation.ts  create-package-json.js  main.ts  preload.ts  shortcuts.ts  tsconfig.json  windowManager.ts
frontend/: README.md  index.html  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  index.tsx  vite-env.d.ts
frontend/src/components/: AudioVisualizer.tsx  ConfigPrompt.tsx  CustomSelect.tsx  RecorderOverlay.tsx  SettingsView.tsx  SettingsWindow.tsx  SetupView.tsx  StatusIndicator.tsx  Toast.tsx  WarningView.tsx
frontend/src/content/: privacy-policy.md  terms-of-service.md
frontend/src/controllers/: dictationController.ts
frontend/src/data/: popularApps.ts
frontend/src/hooks/: useAudioRecorder.ts  useAuth.ts  useDictation.ts  useSettings.ts  useToast.ts
frontend/src/services/: appProfileService.ts  authService.ts  groqChatService.ts  groqService.ts  logModeService.ts  paymentService.ts
frontend/src/types/: appProfile.ts  languages.ts  logMode.ts
frontend/src/utils/: audioUtils.ts  debug.ts  openExternalUrl.ts  soundUtils.ts  tauriApi.ts
payment-service/: .env.example  Cargo.toml  DEVELOPMENT.md  LEMONSQUEEZY_SETUP.md  PRODUCT_SETUP_QUICK_REF.md  QUICKSTART.md  README.md  RUN.md  TESTING_GUIDE.md  TEST_QUICK_START.md  TEST_STATUS.md  TEST_UI_INSTRUCTIONS.md  run.sh  test-ui.html
payment-service/migrations/: 001_create_customers.sql  002_create_subscriptions.sql  003_create_orders.sql  004_create_webhook_events.sql  005_add_license_fields_and_activations.sql
payment-service/src/: config.rs  db.rs  errors.rs  main.rs
payment-service/src/handlers/: checkout.rs  health.rs  license.rs  mod.rs  orders.rs  subscriptions.rs  webhooks.rs
payment-service/src/middleware/: auth.rs  mod.rs
payment-service/src/models/: customer.rs  lemonsqueezy.rs  license_activation.rs  mod.rs  order.rs  subscription.rs  webhook_event.rs
payment-service/src/services/: checkout_service.rs  lemonsqueezy_client.rs  mod.rs  order_sync_service.rs  subscription_service.rs  webhook_service.rs
payment-service/src/utils/: jwt.rs  mod.rs
public/: manifest.json
scripts/: dev-linux.sh  ensure-linux-app-id.sh
services/: geminiService.ts  groqService.ts
specs/001-cancel-recording/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-win-deploy-fix/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-context-log/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-terms-privacy-consent/: plan.md  research.md  spec.md  tasks.md
specs/006-payment-service/: plan.md  spec.md
src/: index.css
src/components/: RecorderOverlay.tsx
src/controllers/: dictationController.ts
src/hooks/: useAudioRecorder.ts  useDictation.ts  useSettings.ts  useToast.ts
src/services/: geminiService.ts  groqService.ts
src/utils/: audioUtils.ts  soundUtils.ts
(+83 files in other folders)
