[package]
name = "scribe"
version = "0.1.0"
description = "Minimalist AI dictation"
authors = ["Shayan Khan"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = ["tray-icon", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
enigo = "0.2"
arboard = "3.3"
tokio = { version = "1", features = ["time"] }
once_cell = "1.20"
walkdir = "2.5"
tauri-plugin-shell = "2.3.3"
image = "0.25"
base64 = "0.22"
lnk = "0.5"

# OAuth and authentication
keyring = "3"                           # OS keychain for secure token storage
reqwest = { version = "0.12", features = ["json"] }  # HTTP client for API calls
tiny_http = "0.12"                      # Local server for OAuth callback
url = "2.5"                             # URL parsing
uuid = { version = "1.6", features = ["v4"] }  # Unique IDs
urlencoding = "2.1"                     # URL encoding for OAuth
dotenvy = "0.15"                        # Load .env file
open = "5.3.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Accessibility",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Gdi"
] }
winreg = "0.52"
