[package]
name = "payment-service"
version = "0.1.0"
edition = "2021"
description = "Payment & subscription service for Trueears (LemonSqueezy)"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "tls-native-tls", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# JWT validation (shared secret with auth-server)
jsonwebtoken = "9"

# HTTP client (LemonSqueezy API calls)
reqwest = { version = "0.12", features = ["json"] }

# Webhook signature verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2.5"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
mockito = "1.2"
tokio-test = "0.4"
